--- a/src/widgets/Chart/Chart.css
+++ b/src/widgets/Chart/Chart.css
@@ -1,9 +1,20 @@
 .chart-container {
     flex: 1;
+    padding-bottom: 20px;
+}
+
+.chart-inner {
+    height: 500px;
 }
 
 .chart-title {
     text-align: center;
     margin-bottom: 10px;
     font-size: 20px;
+}
+
+@media(max-width: 600px) {
+    .chart-inner {
+        height: 200px;
+    }
 }
