--- a/src/widgets/FetchButton/FetchButton.css
+++ b/src/widgets/FetchButton/FetchButton.css
@@ -34,6 +34,5 @@
 @media(max-width: 600px) {
     .btn-grad {
         height: 50px;
-        margin-top: 30px;
     }
 }
